force-app/main/default/objects/Certificate__c/fields/Account_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Account_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Portfolio</label>
    <referenceTo>Account_Portfolio__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates2AccountPortfolio</relationshipName>
    <type>Lookup</type>
</CustomField>