force-app/main/default/objects/Certificate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Approval for licensing / license</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Cancel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>