force-app/main/default/objects/Certificate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Registration of engineers and architects</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Licensing of engineers and architects</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Registration of coaches</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Registration of interns</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Registration of practical engineers</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Registration of technicians</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Registration of accessibility licenses from the CBS (Infrastructure and Environment Buildings) Practical Engineers</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Registration controllers engineers</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Registration of practical controllers</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Registration of payroll checkers</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Registration of accessibility licenses from CS Engineers</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Registration of service accessibility licenses</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Air conditioning licensing</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Registration of permit holders</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>